--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,18 @@ code {
   margin-bottom: 15px;
 }
 
+.margin-left-s {
+  margin-left: 15px;
+}
+
+.margin-left-xs {
+  margin-left: 10px;
+}
+
+.margin-left-xxs {
+  margin-left: 15px;
+}
+
 .text-center {
   text-align: 'center';
 }
