--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -72,9 +72,23 @@
 }
 
 .slot {
-  overflow-y: scroll;
   border: solid 1px #bfbfbf;
   border-radius: 5px;
   padding: 10px;
   max-height: 300px;
+}
+
+.slot-container {
+  overflow-y: scroll;
+  max-height: 230px;
+}
+
+.slot-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+  padding: 5px;
+  border-bottom: solid 1px #D6D6D6;
 }
