--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -92,3 +92,41 @@
   padding: 5px;
   border-bottom: solid 1px #D6D6D6;
 }
+
+.tool-tip {
+  position: relative;
+  display: inline-block;
+}
+
+.tool-tip .tool-tiptext {
+  visibility: hidden;
+  width: 100%;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 15%;
+  left: 150%;
+  margin-left: -60px;
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tool-tip .tool-tiptext::after { /*Box Arrow Setting*/
+  content: " ";
+  position: absolute;
+  top: 50%;
+  right: 100%; /* To the left of the tooltip */
+  margin-top: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: transparent black transparent transparent;
+}
+
+.tool-tip:hover .tool-tiptext {
+  visibility: visible;
+  opacity: 1;
+}
